# tarea1

./: build.gradle.kts  index.html  script.js  settings.gradle.kts  styles.css
meal_db_rust/: .gitignore  Cargo.toml  index.html  styles.css
meal_db_rust/src/: main.rs
src/main/kotlin/: Main.kt
src/main/resources/: index.html
