[package]
name = "meal-db-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "HtmlElement",
  "HtmlInputElement",
  "Window",
  "Document",
  "Element",
  "Node"
] }
